fix footer layout on small mobile screen, fix contact form isse when input selected from history

--- a/src/components/styles/ContactMe.css
+++ b/src/components/styles/ContactMe.css
@@ -145,3 +145,8 @@
 .sendbtn {
     margin-bottom: 10px !important;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 600000s 0s, color 600000s 0s;
+}
