--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,7 +1,3 @@
-/* a {
-    padding: 5px;
-} */
-
 .footer {
     text-align: center;
     min-height: 7rem;
@@ -84,4 +80,8 @@ span {
     .fa-linkedin { color: #007bb5;}
     .fa-brands { font-size: 3rem;}
     
+  }
+
+  @media only screen and (max-width:425px){
+    span { padding-top: 10px; }
   }
